Fix for alignments in mobile breakpoints

--- a/engines/common/nucleus/scss/nucleus/breakpoints/_utilities.scss
+++ b/engines/common/nucleus/scss/nucleus/breakpoints/_utilities.scss
@@ -1,3 +1,4 @@
+// Visibility
 @include breakpoint(large-desktop-range) {
 	.visible-large {
 		display: inherit !important;
@@ -67,5 +68,15 @@
 	}
 	.visible-large {
 		display: none !important;
+	}
+}
+
+// Alignment
+@include breakpoint(mobile-only) {
+	.align-right {
+		text-align: inherit !important;
+	}
+	.align-left {
+		text-align: inherit !important;
 	}
 }
