--- a/themes/hydrogen/common/scss/hydrogen/_footer.scss
+++ b/themes/hydrogen/common/scss/hydrogen/_footer.scss
@@ -2,4 +2,7 @@
 	background: $footer-background;
 	color: $footer-text-color;
 	border-top: 1px solid rgba(0,0,0,0.1);
+	@include breakpoint(mobile-only) {
+		text-align: center;
+	}
 }
